--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/ReportGenerator.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
     "lint": "eslint src/"
   },
   "keywords": [
@@ -22,6 +22,7 @@
     "jest": "^29.7.0"
   },
   "jest": {
-    "transform": {}
+    "transform": {},
+    "testEnvironment": "node"
   }
 }
